<resources>
    <string name="app_name">ArtNesia</string>
    <string name="search_tittle">Search</string>
    <string name="kategori_tittle">Category</string>
    <string name="literatur_tittle">Literature</string>
    <string name="artikel_tittle">Article</string>
    <string name="iv_literature_detail">Literature Image View</string>
    <string name="iv_login">Login Image View</string>
    <string name="tv_login">LOGIN</string>
    <string name="tv_email">Email</string>
    <string name="tv_password">Password</string>
    <string name="tv_akun">Don\'t have an account?</string>
    <string name="tv_daftar">Register</string>
    <string name="iv_register">Register Image View</string>
    <string name="tv_registrasi">REGISTER</string>
    <string name="tv_nama">Name</string>
    <string name="tv_passConfirm">Confirm Password</string>
    <string name="tv_infoRegis">Already have an account?</string>
    <string name="tv_lowerLogin">Login</string>
    <string name="tv_articleRow">Article Row Image View</string>
    <string name="find_another">View More</string>
    <string name="iv_content_desc">Image View Content Description</string>
    <string name="use_image">Use Image</string>
    <string name="more_about_this_art">Know more</string>
    <string name="tv_classified_item">This image classified as</string>
    <string name="msg_for_available_stock">Available stock is %1$s!. You can not add more than stock quantity.</string>
    <string name="classification">Classification:</string>
</resources>