<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.RegisterActivity">


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/registerImageView"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    app:layout_constraintBottom_toTopOf="@+id/guidelineHorizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/guideline2"
                    app:srcCompat="@drawable/logo"
                    android:contentDescription="@string/iv_register" />

                <TextView
                    android:id="@+id/titleTextView"
                    style="@style/TextTittle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="32dp"
                    android:gravity="center"
                    android:text="@string/tv_registrasi"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/guidelineHorizontal" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/nameEditTextLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="28dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="28dp"
                    app:boxCornerRadiusBottomEnd="7dp"
                    app:boxCornerRadiusBottomStart="7dp"
                    app:boxCornerRadiusTopEnd="7dp"
                    app:boxCornerRadiusTopStart="7dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/titleTextView"
                    app:startIconDrawable="@drawable/ic_person">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/nameEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/tv_nama"
                        android:inputType="text"
                        tools:ignore="SpeakableTextPresentCheck,TextContrastCheck" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/emailEditTextLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="28dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="28dp"
                    app:boxCornerRadiusBottomEnd="7dp"
                    app:boxCornerRadiusBottomStart="7dp"
                    app:boxCornerRadiusTopEnd="7dp"
                    app:boxCornerRadiusTopStart="7dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/nameEditTextLayout"
                    app:startIconDrawable="@drawable/ic_email">

                    <EditText
                        android:id="@+id/emailEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/tv_email"
                        android:inputType="textEmailAddress"
                        tools:ignore="SpeakableTextPresentCheck"
                        android:importantForAutofill="no" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/passwordEditTextLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="28dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="28dp"
                    app:boxCornerRadiusBottomEnd="7dp"
                    app:boxCornerRadiusBottomStart="7dp"
                    app:boxCornerRadiusTopEnd="7dp"
                    app:boxCornerRadiusTopStart="7dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/emailEditTextLayout"
                    app:startIconDrawable="@drawable/ic_password">

                    <EditText
                        android:id="@+id/passwordEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/tv_password"
                        android:inputType="textPassword"
                        app:passwordToggleEnabled="true"
                        tools:ignore="SpeakableTextPresentCheck"
                        android:importantForAutofill="no" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/passwordConfirmEditTextLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="28dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="28dp"
                    app:boxCornerRadiusBottomEnd="7dp"
                    app:boxCornerRadiusBottomStart="7dp"
                    app:boxCornerRadiusTopEnd="7dp"
                    app:boxCornerRadiusTopStart="7dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/passwordEditTextLayout"
                    app:startIconDrawable="@drawable/ic_password">

                    <EditText
                        android:id="@+id/passwordConfirmEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/tv_passConfirm"
                        android:inputType="textPassword"
                        app:passwordToggleEnabled="true"
                        tools:ignore="SpeakableTextPresentCheck"
                        android:importantForAutofill="no" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/signupButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="32dp"
                    android:backgroundTint="@color/secondary"
                    android:fontFamily="@font/pregular"
                    android:text="@string/tv_registrasi"
                    android:textColor="@color/white"
                    app:cornerRadius="7dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/passwordConfirmEditTextLayout"
                    tools:ignore="DuplicateSpeakableTextCheck" />

                <TextView
                    android:id="@+id/loginMsgTextView"
                    style="@style/TextContent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="32dp"
                    android:text="@string/tv_infoRegis"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/signupButton" />

                <TextView
                    android:id="@+id/loginTextView"
                    style="@style/TextContent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="32dp"
                    android:text="@string/tv_lowerLogin"
                    android:textColor="@color/secondary"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.503"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/loginMsgTextView" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guidelineHorizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="64dp"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintGuide_percent="0.35"
                    app:layout_constraintStart_toStartOf="parent" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guidelineVertical"
                    android:layout_width="wrap_content"
                    android:layout_height="64dp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintGuide_percent="0.5"
                    app:layout_constraintStart_toStartOf="parent" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline2"
                    android:layout_width="wrap_content"
                    android:layout_height="64dp"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_percent="0.05" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>